quick fixes for spacing issues

--- a/src/sass/partials/_instructions.scss
+++ b/src/sass/partials/_instructions.scss
@@ -6,6 +6,11 @@
     justify-content: center;
 }
 
+.homePage{
+    height: 110vh;
+    margin-top: 1rem;
+}
+
 .instructionsContainer {
     position: relative;
     margin-top: 2rem;
