--- a/src/sass/partials/_sunInfo.scss
+++ b/src/sass/partials/_sunInfo.scss
@@ -4,4 +4,5 @@
     justify-content: flex-start;
     align-content: center;
     position: relative;
+    height: 160vh;
 }
